---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 23.03.2023
  Changes:
    - added some GUI tweaks (PR #10)
  Bugfixes:
    - fixed two issues in induction matrix calculation (PR #9)
    - fixed some lang issues (PR #11)
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 04.04.2023
  Features:
    - added sulfur veins (sulf planet fragment now also yields new sulfur chunks)
  Changes:
    - there are now seperate filtering versions for the inserter cranes, all current cranes are now named filtering
    - substations require less concrete
    - plastic bars from benzol require less petrol and make 3 instead of 2 per craft
    - reduced craft time on Benzol to 1s
    - increased the yield of one cylce of crude oil processing to match vanilla advanced oil processing (55 petrol, 45 light, 35 kero, 25 heavy, 10 lube now)
    - increased output of coke liquefaction
    - reduced usage of sulfuric acid on advanced circuits and for carbon fiber plates
    - reduced mining time of buildings
    - assembling machine 3 can now be upgraded to neo
  Bugfixes:
    - fixed that nuclear fuel gets properly migrated

---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 31.03.2023
  Changes:
    - Bio armor now has proper charater sprite
    - max age percentage set to 90, default to 65
    - centrifuging U235/238 takes less time (20s -> 8s)
    - increased yield of fission product refinig
    - added productivity to more recipes
    - spoodertron now consumes way less fuel
    - buffed High energy rocket fuels acceleration bonus to 210%
  Bugfixes:
    - fixed an issue when deconstructing black hole with full inv
    - cleanup disabled research for third party mods
    - fixed a bug where smelting mechanical parts gives to much molten metal