@@ -1,6 +1,6 @@
 {
     "name": "exotic-industries",
-    "version": "0.3.0",
+    "version": "0.3.1",
     "title": "Exotic Industries",
     "author": "PreLeyZero",
     "factorio_version": "1.1",
