@@ -571,9 +571,9 @@ ei_induction-matrix-advanced-converter=Advanced converter of the Induction matri
 ei_induction-matrix-superior-converter=Superior converter of the Induction matrix multistructure. Increases matrix energy transfer rate. 4 of these are supported at max.
 ei_induction-matrix-basic-solenoid=Solenoid of the Induction matrix multistructure. Can increase efficiency of coils when placed next to them in series. Too many solenoids however can cause a decrease in matrix energy capacity.
 ei_fission-facility=Obtain fission related knowledge to develop fission reactors.
-ei_high-temperature-reactor=Needs to be powered with [color=red]heat[/color] from other reactors. Produces large amounts of steam and can also utilze [color=orange]thorium[/color] [item=ei_thorium-232] based fuel.
+ei_high-temperature-reactor=Needs to be powered with [color=red]heat[/color] from other reactors. Produces large amounts of steam and can also utilze [color=orange]thorium[/color] [item=ei_thorium-232] based fuel. When using a [color=green]uranium-235 fuel rod[/color] [item=ei_uranium-235-fuel] this machine generates 500MW of power.
 ei_castor=Store your dirty [color=yellow]nuclear waste[/color] [item=ei_nuclear-waste] here.
-ei_neutron-collector=Absorbs neutrons from neutron sources, such as nuclear reactors, fusion reactors and other, to charge up [color=blue]neutron containers[/color] [item=ei_charged-neutron-container].
+ei_neutron-collector=Absorbs neutrons from neutron sources, such as nuclear reactors, fusion reactors and other, to charge up [color=blue]neutron containers[/color] [item=ei_charged-neutron-container]. Depending on how far away the collector is from a neutron source its efficiency will change. The closer the more efficient. A lower efficiency means, that one charge up proccess of a [color=blue]neutron container[/color] [item=ei_neutron-container] -> [item=ei_charged-neutron-container] will take longer.
 ei_neutron-activator=Infuse various elements with neutrons from [color=blue]neutron containers[/color] [item=ei_charged-neutron-container] to obtain value fusion fuel.
 ei_fusion-reactor=A thermonuclear fusion reactor. It can fuse various fusion fuels together to heat up [color=orange]liquid lead coolant[/color] [fluid=ei_cold-coolant][fluid=ei_hot-coolant] for power generation. The reactor can work in various modes. Be sure to check out the InformaTron wiki for more information.
 ei_gauss-module=[font=default-bold]The god module.[/font] This module can be used in [font=default-bold]any machine that accepts productivity[/font], but is not restricted on certain recipes.
@@ -588,6 +588,10 @@ ei_z-boson-cavity=A cavity designed to store z-bosons.
 ei_gluon-cavity=A cavity designed to store gluons.
 ei_destill-tower=A distillation tower that requires [color=red]heat[/color] to function. Can separate [color=orange]residual oil[/color] [fluid=ei_residual-oil] into its components.
 ei_advanced-destillation-tower=A distillation tower that requires [color=yellow]electricity[/color] to function. Can separate [color=orange]residual oil[/color] [fluid=ei_residual-oil] into its components.
+ei_mining-satellite=A satellite that can mine [color=orange]planet rocks[/color] [item=ei_moon-rock][item=ei_sulf-rock][item=ei_mars-rock][item=ei_uran-rock][item=ei_exotic-rock] from their respective space destinations. Will always mine [color=red]10.000[/color] rocks per launch.
+ei_watch-satellite=A satellite that observes planets and stars for [color=orange]data[/color] [item=ei_sun-data][item=ei_gas-giant-data]. Will always aquire [color=red]10.000[/color] data per launch, however very demanding physical conditions around a destination will allow only [color=red]10.000[/color] data per launch.
+ei_exploration-satellite=A satellite that explores the unknown! Shoot it into distant space and maybe you will find something interesting.
+ei_rocket-silo=Launch rockets into space and towards different destinations. More info in the InformaTron wiki and in the rocket silo GUI.
 
 ei_space-data=Obtained by launching a [color=blue]satellite[/color] [item=satellite] into [color=green]nauvis orbit[/color].
 ei_moon-fish=Obtained by launching a [color=blue]raw fish[/color] [item=raw-fish] to the [color=green]moon[/color].
@@ -695,7 +699,7 @@ fusion-reactor-gui-injection-rate-tooltip=Rate at which fusion fuel is injected 
 rocket-silo-gui-title=Console
 rocket-silo-gui-destination-title=Destination
 rocket-silo-gui-destination-dropdown-label=Set destination [img=info]
-rocket-silo-gui-destination-dropdown-label-tooltip=Desintation can only be modified while the rocket is being built. Changing rocket destination will [color=yellow]reset rocket building progress[/color] in this silo. 
+rocket-silo-gui-destination-dropdown-label-tooltip=Destination can only be modified while the rocket is being built. Changing rocket destination will [color=yellow]reset rocket building progress[/color] in this silo. 
 rocket-silo-gui-destination-nauvis-orbit=Nauvis Orbit
 rocket-silo-gui-destination-moon=Moon
 rocket-silo-gui-destination-mars=Mars
@@ -908,7 +912,7 @@ space-destinations=Space destinations
 space-destinations-text=The [color=orange]rocket silo[/color] [item=rocket-silo] can be used to send its cargo to different destinations. When it first gets unlocked in the computer age you will only be able to send satellites into [color=green]nauvis orbit[/color]. Depending on the type of sent satellite or rocket cargo you can then recieve data or other usefull launch products.
 
 space-destinations-2=Different destinations
-space-destinations-2-text=As you progress, various destinations in and away from your native solar system will become available. Depending on the distance to the selected destination you will need more or less rocket fuel. Additionally some destinations need to be uncovered first, either by sending a specialised [color=orange]exploration satellite[/color] [item=ei_exploration-satellite] or by chance when sending a rocket with normal cargo. Some new destiantions might be located in deep space, [color=purple]out of the solar system[/color]. Note that even when sending exploration satellites uncovering new destinations always depends on chance.  
+space-destinations-2-text=As you progress, various destinations in and away from your native solar system will become available. Depending on the distance to the selected destination you will need more or less rocket fuel. Additionally some destinations need to be uncovered first, either by sending a specialised [color=orange]exploration satellite[/color] [item=ei_exploration-satellite] or by chance when sending a rocket with normal cargo. Some new destinations might be located in deep space, [color=purple]out of the solar system[/color]. Note that even when sending exploration satellites uncovering new destinations always depends on chance.  
 
 induction-matrix=Induction matrix
 induction-matrix-text=The [color=orange]induction matrix[/color] is a compound machine that can be used to store large amounts of energy. It can be used to store overhead power just like normal accumulators and then release it later on. Different tiers of matrix size can be unlocked by researching the corresponding technologies.
